# ChangeLog for app-laptop/fnfx
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-laptop/fnfx/ChangeLog,v 1.5 2007/04/28 17:48:39 swegener Exp $

  28 Apr 2007; Sven Wegener <swegener@gentoo.org> fnfx-0.3.ebuild:
  Fix *initd, *confd and *envd calls (#173884, #174266)

  23 Jan 2007; Marius Mauch <genone@gentoo.org> fnfx-0.3.ebuild:
  Replacing einfo with elog

  03 Jun 2006; Mark Loeser <halcy0n@gentoo.org> fnfx-0.3.ebuild:
  Stable on x86; bug #134627

*fnfx-0.3 (22 Feb 2005)

  22 Feb 2005; Stefan Schweizer <genstef@gentoo.org> +metadata.xml,
  +files/fnfxd, +fnfx-0.3.ebuild:
  Moved from net-wireless/fnfx to app-laptop/fnfx.

*fnfx-0.3 (28 Jan 2005)

  28 Jan 2005; Stefan Schweizer <genstef@gentoo.org> +metadata.xml,
  +files/fnfxd, +fnfx-0.3.ebuild:
  New ebuild thanks to stephan <stephan-01@gmx.de>, Ben Ford
  <ben@kalifornia.com>, Julioromano <romanomarco@tin.it>, Kalin KOZHUHAROV
  <kalin@ThinRope.net>, Nik Raub <niknik79@bossmail.de>, azote
  <azote@slinux.net>, Claudio Corsi <corsic@cli.di.unipi.it> and Wolfgang
  Frisch <xororand@frexx.de> in bug 33335
