@@ -1,5 +1,15 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 AUX fnfxd 411 RMD160 53c7cf8e7f25fbafedf57fe4fab00a51b9cdd7b0 SHA1 8a290509c533b30d19b4b8ecb3abe8d2fbc636cf SHA256 77eced24602e5c5a06f6a8e883fd99edde950106821aa74d5053a433fff74f41
 DIST fnfx-0.3.tar.gz 98430 RMD160 4157288b7d8f6a2c9e3326c9c16b4d73f063f751 SHA1 33cb4ed921f45022bd1c0ea550ee2d9e40f03d27 SHA256 c21a5611d4cc5d2170ec3bd05cb3dc805f5542cba260938e47614ed472812dbf
-EBUILD fnfx-0.3.ebuild 730 RMD160 0ea317b2234b309e3f3c1960c5987ac770105011 SHA1 6485d6fc9a31115d3ae8ae4c4f10a50403818249 SHA256 24edb2307dd5d9645981b7c215540f22f52e8fe351de4d2e98d61c3a5a1e7da8
-MISC ChangeLog 1140 RMD160 24c44c6d4c4c071b1013bd5e4e6abebc2e850d08 SHA1 5457a2663f3a2e2a4436714a9261251809126c30 SHA256 b0b87e3922725ca5b1aa5dd24af9995f1f9ddebca679e133f1c5d86762c0b08a
+EBUILD fnfx-0.3.ebuild 735 RMD160 7370c2988fe4f7c2eae2bb1aff3a5c5e827ccc61 SHA1 8cb71a927a72bbd658f8e644a5b1edd825e3c5ef SHA256 e5756c8d12e9e9a2935b3b3298755e949b371cc4447f01cbe8ec4cfa32742b9a
+MISC ChangeLog 1230 RMD160 8c019e375ef07c78c744c58cded5bcc3bcc9cff3 SHA1 45246ee94f1a44c18fdcc4d77aa345018d8607d9 SHA256 252c64c5d2d6b6ab6a3e58f95efa5a12cc87a6f8ca8a15f50fe9cb86dc91611c
 MISC metadata.xml 159 RMD160 54af1e9a61e5ed1b49b2bbbf3ef2278999c66b13 SHA1 bce3da4745192397c9a08bdbcf7e4914eac9b77b SHA256 ed3a0d440cfa5672284f4172ebde0ea6506c1a38e9a3ed9f14f3d2c093aac42f
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.11 (GNU/Linux)
+
+iEYEARECAAYFAkoNz1sACgkQkKaRLQcq0GLFagCgpgsLWrqHAe1FAirxZ6S2aZ23
+ILkAoIrxahSw+GCCHOecd+Kqg+fnJadP
+=8ONZ
+-----END PGP SIGNATURE-----
