@@ -1,6 +1,6 @@
-# Copyright 1999-2007 Gentoo Foundation
+# Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-laptop/fnfx/fnfx-0.3.ebuild,v 1.4 2007/04/28 17:48:39 swegener Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-laptop/fnfx/fnfx-0.3.ebuild,v 1.5 2009/05/15 20:23:41 maekke Exp $
 
 DESCRIPTION="Daemon and client allowing use of Toshiba special keys"
 HOMEPAGE="http://fnfx.sourceforge.net/"
@@ -8,7 +8,7 @@ SRC_URI="mirror://sourceforge/fnfx/${P}.tar.gz"
 
 LICENSE="GPL-2"
 SLOT="0"
-KEYWORDS="x86"
+KEYWORDS="~amd64 x86"
 IUSE=""
 
 src_install() {
